--- a/DACDemo/Client/Pages/FetchData.razor
+++ b/DACDemo/Client/Pages/FetchData.razor
@@ -5,6 +5,7 @@
 <h1>DefaultAzureCredential Demo</h1>
 
 <button @onclick="Create">Create New Blob</button>
+<button @onclick="Load">Refresh</button>
 
 @if (blobs == null)
 {
